# ink-merkle-airdrop

./: README.md  package.json
contracts/: Cargo.toml  package.json
contracts/.papi/: polkadot-api.json
contracts/.papi/contracts/: assets.json  erc20.json  merkle_airdrop.json
contracts/.papi/descriptors/: package.json
contracts/data/airdrop/: airdrop.csv  airdrop_setup.json
contracts/deployments/assets/: assets.contract  assets.json  assets.polkavm  passetHub.ts
contracts/deployments/erc20/: erc20.contract  erc20.json  erc20.polkavm  passetHub.ts
contracts/deployments/merkle_airdrop/: merkle_airdrop.contract  merkle_airdrop.json  merkle_airdrop.polkavm  passetHub.ts
contracts/scripts/: deploy.ts  setup_airdrop.ts
contracts/scripts/utils/: deploy-contract.ts  init-api.ts  merkle_tree.ts
contracts/src/assets/: Cargo.toml  lib.rs
contracts/src/erc20/: Cargo.toml  lib.rs
contracts/src/merkle_airdrop/: Cargo.toml  e2e_tests.rs  lib.rs
frontend/: package.json
frontend/src/app/: app.tsx
frontend/src/components/web3/: chain-select.tsx  contract-card.tsx  fund-card.tsx
frontend/src/lib/: merkle_tree.ts  metadata.ts  utils.ts
frontend/src/lib/inkathon/: deployments.ts
frontend/src/lib/reactive-dot/: config.ts
