[package]
authors = ["truthixify"]
edition = "2021"
name = "assets"
version = "0.1.0"

[package.metadata.ink-lang]
abi = "all"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3", default-features = false, features = [
    "unstable-hostfn",
] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = ["ink/std"]
