[package]
name = "merkle_airdrop"
version = "0.1.0"
authors = ["truthixify"]
edition = "2021"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3", default-features = false, features = [
    "unstable-hostfn",
] }

# Note: We **need** to specify the `ink-as-dependency` feature.
#
# If we don't we will end up with linking errors!
assets = { path = "../assets", default-features = false, features = [
    "ink-as-dependency",
] }
pallet-revive-uapi = { git = "https://github.com/paritytech/polkadot-sdk", rev = "f8c90b2a01ec77579bccd21ae17bd6ff2eeffd6a", default-features = false, features = [
    "unstable-hostfn",
] }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.3" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",

    # Note: The metadata generation step requires `std`. If we don't specify this the metadata
    # generation for our contract will fail!
    "assets/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "all"
